deployment/mongodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app: database
spec:
  type: NodePort
  ports:
  # ports that this service should serve on
  -
    name: pass-through-http
    protocol: TCP
    port: 27017
    nodePort: 32017
  selector:
    app: database
