deployment/mongodb/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mongodb-standalone
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  tls:
  - hosts:
    - mongodb
  rules:
  - host: mongodb
    http:
      paths:
      - path: /
        backend:
          serviceName: database
          servicePort: 27017
